# nicegraf-samples

./: CMakeLists.txt
artifacts/shaders/hlsl/: cubemap.hlsl  hexagon.hlsl  imgui.hlsl  model-view-projection.hlsl  sampling.hlsl  spec_consts.hlsl  textured-cube.hlsl
common/: common.cpp  imgui_ngf_backend.cpp
vol-01/00-imgui/: imgui.cpp
vol-01/01-full-screen-triangle/: full-screen-triangle.cpp
vol-01/02-spec-consts/: spec-consts.cpp
vol-01/03-hexagon/: hexagon.cpp
vol-01/04-hexagon-indexed/: hexagon-indexed.cpp
vol-01/05-uniform-buffers/: uniform-buffers.cpp
vol-01/06-depth/: depth.cpp
vol-01/07-simple-texture/: simple-texture.cpp
vol-01/08-render-to-texture/: render-to-texture.cpp
vol-01/09-texture-sampling/: texture-sampling.cpp
vol-01/0a-instancing/: instancing.cpp
vol-01/0b-shader-editor/: shader-editor.cpp
vol-01/0c-cubemap/: cubemap.cpp
vol-02/00-model-view-projection/: model-view-projection.cpp
